03-Angular-frontend/ecommerce-app/src/styles.css
/* ... */
.header-mobile .hamburger{
    width:36px;
    height:36px;
    padding:0;
    line-height:1;
    vertical-align:top;
    background:#fff;
    display:-webkit-box;
    display:-webkit-flex;
    display:-moz-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-pack:center;
    -webkit-justify-content:center;
    -moz-box-pack:center;
    -ms-flex-pack:center;
    justify-content:center;
    -webkit-box-align:center;
    -webkit-align-items:center;
    -moz-box-align:center;
    -ms-flex-align:center;
    align-items:center
}
.header-mobile .hamburger .hamburger-box{
    width:20px;
    height:15px
}
.header-mobile .hamburger .hamburger-box .hamburger-inner{
    width:20px;
    height:2px;
    -webkit-border-radius:0;
    -moz-border-radius:0;
    border-radius:0
}
.header-mobile .hamburger .hamburger-box .hamburger-inner:before{
    width:20px;
    height:2px;
    top:6px
}
.header-mobile .hamburger .hamburger-box .hamburger-inner:after{
    top:12px;
    width:20px;
    height:2px
}
.header-mobile .navbar-mobile{
    display:none;
    position:absolute;
    width:100%;
    top:88px;
    z-index:20
}
.header-mobile .navbar-mobile .navbar-mobile-list{
    background:#f8f8f8
}
.header-mobile .navbar-mobile .navbar-mobile-list>li>a{
    padding-left:15px!important
}
.header-mobile .navbar-mobile .navbar-mobile-list li a{
    color:#555;
    display:block;
    padding:10px 15px;
    padding-right:25px;
    padding-left:0;
    border-bottom:1px solid #e6e6e6;
    text-transform:capitalize;
    line-height:inherit
}
.header-mobile .navbar-mobile .navbar-mobile-list li a:hover{
    color:#0da8e4
}
.header-mobile .navbar-mobile .navbar-mobile-list li a>i{
    margin-right:19px
}
.navbar-mobile-sub-list{
    display:none;
    padding-left:30px;
    background:#fff
}
.header-mobile .navbar-mobile .navbar-mobile-sub-list li a{
    padding-left:15px
}
.header-mobile-2{
    background:#393939;
    position:static
}
.header-mobile-2.header-mobile .navbar-mobile{
    top:82px
}
.header-mobile-2.header-mobile .hamburger{
    background:0 0
}
.header-mobile-2.header-mobile .hamburger .hamburger-box .hamburger-inner{
    background:#fff
}
.header-mobile-2.header-mobile .hamburger .hamburger-box .hamburger-inner::before{
    background:#fff
}
.header-mobile-2.header-mobile .hamburger .hamburger-box .hamburger-inner::after{
    background:#fff
}
.main-content.page-m{
    padding:10% 15%!important
}

/* 
 * ----------------------------
 * Products List
 * ----------------------------
 */

.product-box img {
    width: 150px;
}

.items select {
    width: 100px;
    height: 40px;
    border-radius: 40px;
    padding-left: 15px;
    margin-bottom: 10px;
    outline: 0;
    margin-left: 5px;
}
.product-box{
    margin-bottom:60px
}
.price{
    margin:15px 0 0;
    font-weight:800;
    color:#0da8e4
}
.product-box h1{
    font-size:18px;
    border-bottom:1px solid #ccc;
    padding-bottom:5px;
    font-weight:600;
    padding-top:12px;
    margin-bottom:7px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.product-box h2{
    font-size:15px;
    padding-bottom:0;
    font-weight:500;
    color:#585858
}

/* 
 * ----------------------------
 * Shopping Cart Checkout
 * ----------------------------
 */

.form-area{
    background:#e5e5e5;
    position:relative;
    margin-bottom:45px;
    padding:50px 20px;
    border:3px solid #ccc
}
.form-area h3{
    position:absolute;
    top:-26px;
    left:13px;
    background:#e5e5e5;
    padding:10px 20px;
    font-weight:500;
    z-index:23;
    display:inline-block
}
.input-space{
    margin-bottom:20px
}
.input-space label{
    padding-left:31px;
    font-size:14px;
    margin-bottom:50px
}
.input-space input[type=text]{
    width:100%;
    height:40px;
    border-radius:30px;
    outline:0;
    padding:10px;
    border:1px solid #ccc
}
.input-space select{
    width:100%;
    height:40px;
    border-radius:30px;
    outline:0;
    padding:0 10px;
    border:1px solid #ccc
}
.au-checkbox{
    display:block;
    position:relative;
    cursor:pointer;
    font-size:22px;
    -webkit-user-select:none;
    -moz-user-select:none;
    -ms-user-select:none;
    user-select:none
}
.au-checkbox input{
    position:absolute;
    opacity:0;
    cursor:pointer
}
.au-checkmark{
    position:absolute;
    top:0;
    left:0;
    height:22px;
    width:22px;
    background-color:#fff!important;
    border:2px solid #e5e5e5;
    -webkit-border-radius:2px;
    -moz-border-radius:2px;
    border-radius:2px
}
.au-checkbox:hover input~.au-checkmark{
    background-color:transparent
}
.au-checkbox input:checked~.au-checkmark{
    background-color:#fff
}
.au-checkmark:after{
    content:"";
    position:absolute;
    display:none
}
.au-checkbox input:checked~.au-checkmark:after{
    display:block
}
label.date{
    padding-top:8px
}
.au-checkbox .au-checkmark:after{
    left:5px;
    top:-1px;
    width:9px;
    height:15px;
    border:solid #0da8e4;
    border-width:0 4px 4px 0;
    -webkit-border-radius:2px;
    -moz-border-radius:2px;
    border-radius:2px;
    -webkit-transform:rotate(45deg);
    -moz-transform:rotate(45deg);
    -ms-transform:rotate(45deg);
    -o-transform:rotate(45deg);
    transform:rotate(45deg)
}
option:first{
    color:#ccc
}
select{
    color:#828482
}

/* 
 * ----------------------------
 * Shopping Cart Details
 * ----------------------------
 */

.table{
    margin:0
}
table.table.table-bordered{
    border:1px solid #ccc;
    background:#fff
}
.table-bordered td,.table-bordered th{
    border:1px solid #dee2e6
}
table.table.table-bordered th{
    BACKGROUND:#0da8e4;
    color:#fff;
    font-size:14px;
    padding:7px
}
.table-responsive{
    padding-right:1px
}
.items select{
    width:100px;
    height:40px;
    border-radius:40px;
    padding-left:15px;
    margin-bottom:10px;
    outline:0;
    margin-left:5px
}
/* ... */

